<resources>
    <string name="app_name">仁医网院</string>
    <string name="action_settings">Settings</string>
    <string name="text_test">发布时删除</string>
    <string name="login">登录</string>
    <string name="skip">跳过</string>
    <string name="login_input_account">请输入账户或手机号</string>
    <string name="login_input_password">请输入密码</string>
    <string name="forget_password">忘记密码</string>
    <string name="input_phone">请输入手机号码</string>
    <string name="identifying_code">验证码</string>
    <string name="get_identifying_code">获取验证码</string>
    <string name="agreement">已阅读并同意</string>
    <string name="next_step">下一步</string>
    <string name="set_password">设置密码</string>
    <string name="re_password">重复密码</string>
    <string name="tip_password">密码为6&#8211;20位字母和数字的组合</string>
    <string name="update_finish">完成修改</string>
    <string name="diagnosis_agreement">《言行医至问诊服务协议》</string>
    <string name="create_apply">提交开通申请</string>
    <string name="diagnosis_submit">提交后即代表您同意《言行医至问诊服务协议》</string>
    <string name="search">搜索</string>
    <string name="card_dec">扫描二维码，关注我，向我咨询、问诊、预约挂号，我会及时为您提供健康服务。</string>
    <string name="create_group"><u>新建团队</u></string>

    <!--公用-->
    <string name="txt_doctor_colon">医生:</string>
    <string name="txt_patient_colon">患者:</string>
    <string name="txt_voice_hint">可输入语音</string>
    <string name="txt_select_doctor_hint">请选择医生</string>
    <string name="txt_select_consultation_doctor_hint">请选择会诊医生</string>
    <string name="txt_inquiry_order_colon">问诊单:</string>
    <string name="txt_select_inquiry_order_hint">请选择问诊单</string>
    <string name="txt_age">%s岁</string>
    <string name="txt_receive">接收</string>
    <string name="txt_commit">提交</string>
    <string name="txt_three_value">%s、%s、%s</string>
    <string name="txt_three_value_space">%s&#160;%s&#160;%s</string>

    <!--健康管理-->
    <string name="txt_health_manager">健康管理</string>
    <string name="txt_patient_info">患者信息</string>
    <string name="txt_message">消息</string>
    <string name="txt_all_people">所有人</string>
    <string name="txt_unusual_patient">体征异常患者</string>
    <string name="txt_is_focus">是否重点关注</string>
    <string name="txt_label_colon">标签:</string>
    <string name="txt_remark_colon">备注:</string>
    <string name="txt_edit_remark_hint">请编辑备注信息</string>
    <string name="txt_blood_oxygen">血氧</string>
    <string name="txt_blood_glucose">血糖</string>
    <string name="txt_blood_pressure">血压</string>
    <string name="txt_heart_rate">心率</string>

    <!--在线问诊-->
    <string name="txt_triage">分诊</string>
    <string name="txt_triage_receive">分诊接收</string>
    <string name="txt_triage_order_detail">分诊单详情</string>
    <string name="txt_transfer_depart_description">转科说明</string>
    <string name="txt_condition_information">病情资料</string>
    <string name="txt_condition_information_hint">（检查报告、处方或其他病情资料）</string>
    <string name="txt_transfer_depart_description_hint">请详细描述您的疑问或症状，疾病，和身体情况（最多支持输入500字）</string>
    <string name="txt_patient_info_colon">患者信息：</string>
    <string name="txt_triage_description_colon">分诊说明：</string>
    <string name="txt_apply">申请</string>
    <string name="txt_apply_colon">申请：</string>
    <string name="txt_apply_people_colon">申请人：</string>
    <string name="txt_receive_colon">接收：</string>

    <!--会诊-->
    <string name="txt_consultation">会诊</string>
    <string name="txt_add_consultation">加入会诊</string>
    <string name="txt_add_reason">加入理由</string>
    <string name="txt_add_consultation_des">您并非会诊受邀医生，无需参与会诊视频会议。如需查看会诊详情，您可申请加入会诊，通过授权后方可查看。</string>
    <string name="txt_exit_consultation">结束会诊</string>
    <string name="txt_consultation_apply_info">会诊申请单</string>
    <string name="txt_medical">病历</string>
    <string name="txt_report_info">报告单</string>
    <string name="txt_video">影像</string>
    <string name="txt_consultation_receive">会诊结论</string>
    <string name="txt_consultation_grade_colon">会诊等级:</string>
    <string name="txt_select_consultation_grade">请选择会诊等级</string>
    <string name="txt_apply_doctor_colon">申请医生:</string>
    <string name="txt_consultation_doctor_colon">会诊医生:</string>
    <string name="txt_consultation_time_colon">会诊时间:</string>
    <string name="txt_select_consultation_time">请选择会诊时间</string>
    <string name="txt_consultation_reason_purpose">会诊理由及目的</string>
    <string name="txt_consultation_reason_purpose_hint">请输入会诊理由及目的（10&#8211;500字以内）</string>
    <string name="txt_medical_summary">病情摘要</string>
    <string name="txt_medical_summary_hint">输入患者病情（10&#8211;2000字以内）</string>
    <string name="txt_visit_card">就诊卡：%s</string>
    <string name="txt_visit_time">就诊时间</string>
    <string name="txt_apply_time">申请时间</string>
    <string name="txt_press_voice">按住输入语音</string>
    <string name="txt_my_order">我参与的会诊</string>
    <string name="txt_other_order">我未参与的会诊</string>


    <!-- 讯飞SDK appid -->
    <string name="xunfei_app_id">5dd938d5</string>
    <string name="txt_sign_register">设置签名口令</string>
    <string name="txt_sign_reset">重置签名口令</string>
</resources>
