<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_63">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingStart="@dimen/dp_20"
            android:paddingEnd="@dimen/dp_20"
            android:src="@mipmap/group_dialog_close" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/txt_add_consultation"
            android:textColor="@color/fontColorPrimary"
            android:textSize="@dimen/sp_18" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/line_color" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_33"
        android:layout_marginTop="@dimen/dp_22"
        android:layout_marginEnd="@dimen/dp_33"
        android:text="@string/txt_add_consultation_des"
        android:textColor="@color/fontColorPrimary"
        android:textSize="@dimen/sp_14" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_33"
        android:layout_marginTop="@dimen/dp_30"
        android:layout_marginEnd="@dimen/dp_33"
        android:drawableStart="@mipmap/icon_add_consultation"
        android:drawablePadding="@dimen/dp_12"
        android:gravity="center"
        android:text="@string/txt_add_reason"
        android:textColor="@color/fontColorPrimary"
        android:textSize="@dimen/sp_14" />

    <com.keydom.ih_common.view.InterceptorEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/dp_32"
        android:paddingTop="@dimen/dp_37"
        android:paddingEnd="@dimen/dp_32"
        android:paddingBottom="@dimen/dp_37">

        <TextView
            android:layout_width="@dimen/dp_100"
            android:layout_height="@dimen/dp_32"
            android:background="@drawable/corner5_f9f9f9_bg"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/fontColorPrimary"
            android:textSize="@dimen/sp_14" />

        <TextView
            android:layout_width="@dimen/dp_100"
            android:layout_height="@dimen/dp_32"
            android:layout_alignParentEnd="true"
            android:background="@drawable/corner5_ff3939_bg"
            android:gravity="center"
            android:text="@string/txt_apply"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_14" />

    </RelativeLayout>

</LinearLayout>