<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/common_white_click_bg"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@drawable/common_bottom_line_bg">

        <TextView
            android:id="@+id/triage_order_list_date_tv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"
            android:drawableStart="@mipmap/point_blue"
            android:drawablePadding="@dimen/dp_10"
            android:gravity="center"
            android:textColor="@color/primary_font_color"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/triage_order_list_status_tv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:drawableStart="@mipmap/patient_circle_green"
            android:drawablePadding="@dimen/dp_6"
            android:gravity="end|center_vertical"
            android:textSize="14sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/common_bottom_line_bg"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="@dimen/dp_20">

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="19dp"
            android:gravity="center"
            android:text="@string/txt_patient_info_colon"
            android:textColor="@color/action_bar_txt_color"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/triage_order_list_patient_info_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="19dp"
            android:layout_toEndOf="@id/text"
            android:text="@string/txt_three_value"
            android:textColor="@color/primary_font_color"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/triage_order_list_patient_info_tv"
            android:layout_marginTop="18dp"
            android:text="@string/txt_triage_description_colon"
            android:textColor="@color/action_bar_txt_color"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/triage_order_list_description_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/triage_order_list_patient_info_tv"
            android:layout_marginTop="18dp"
            android:layout_toEndOf="@id/text1"
            android:textColor="@color/primary_font_color"
            android:textSize="12sp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="87.5dp"
        android:background="@drawable/common_bottom_line_bg"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            android:id="@+id/text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="19dp"
            android:drawableStart="@mipmap/point_green"
            android:drawablePadding="@dimen/dp_10"
            android:gravity="center"
            android:text="@string/txt_apply_colon"
            android:textColor="@color/action_bar_txt_color"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/triage_order_list_apply_info_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="19dp"
            android:layout_toEndOf="@id/text2"
            android:textColor="@color/cu_black"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/text3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/triage_order_list_apply_info_tv"
            android:layout_marginTop="18dp"
            android:drawableStart="@mipmap/point_red"
            android:drawablePadding="@dimen/dp_10"
            android:text="@string/txt_receive_colon"
            android:textColor="@color/action_bar_txt_color"
            android:textSize="12sp" />


        <TextView
            android:id="@+id/triage_order_list_receive_info_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/triage_order_list_apply_info_tv"
            android:layout_marginTop="18dp"
            android:layout_toEndOf="@id/text3"
            android:textColor="@color/cu_black"
            android:textSize="12sp" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_10"
        android:background="@color/line_color" />
</LinearLayout>