<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_bg_color"
    android:orientation="vertical">

    <include layout="@layout/common_title_bar"></include>

    <ImageView
        android:layout_width="@dimen/dp_316"
        android:layout_height="@dimen/dp_154"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_35"
        android:src="@mipmap/testadbg" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_43"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="@dimen/dp_19"
        android:layout_marginTop="@dimen/dp_6"
        android:layout_marginEnd="@dimen/dp_19"
        android:background="@drawable/update_password_input_bg">

        <ImageView
            android:layout_width="@dimen/dp_17"
            android:layout_height="23dp"
            android:layout_marginStart="@dimen/dp_12"
            android:layout_marginTop="@dimen/dp_12"
            android:layout_marginBottom="@dimen/dp_12"
            android:src="@mipmap/username" />


        <com.keydom.ih_common.view.ClearEditText
            android:id="@+id/phone_input_et"
            style="@android:style/Widget.EditText"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_43"
            android:layout_marginStart="@dimen/dp_41"
            android:background="@null"
            android:maxLength="15"
            android:hint="@string/input_phone"
            android:singleLine="true"
            android:textColor="@color/primary_font_color"
            android:textColorHint="@color/fontColorDirection"
            android:textCursorDrawable="@drawable/edit_cursor"
            android:textSize="@dimen/sp_13" />

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_43"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="@dimen/dp_19"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginEnd="@dimen/dp_19"
        android:background="@drawable/update_password_input_bg">

        <ImageView
            android:layout_width="@dimen/dp_17"
            android:layout_height="@dimen/dp_19"
            android:layout_marginStart="@dimen/dp_12"
            android:layout_marginTop="@dimen/dp_12"
            android:layout_marginBottom="@dimen/dp_12"
            android:src="@mipmap/password" />


        <com.keydom.ih_common.view.InterceptorEditText
            android:id="@+id/code_input_et"
            style="@android:style/Widget.EditText"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_43"
            android:layout_marginStart="@dimen/dp_41"
            android:layout_toLeftOf="@id/get_identifying_code_bt"
            android:background="@null"
            android:maxLength="10"
            android:hint="@string/identifying_code"
            android:singleLine="true"
            android:textColor="@color/primary_font_color"
            android:textColorHint="@color/fontColorDirection"
            android:textCursorDrawable="@drawable/edit_cursor"
            android:textSize="@dimen/sp_13" />

        <com.keydom.ih_common.view.MButton
            android:id="@+id/get_identifying_code_bt"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="@dimen/dp_90"
            android:layout_height="@dimen/dp_37"
            android:layout_alignParentRight="true"
            android:layout_marginTop="@dimen/dp_4"
            android:background="@drawable/login_btn"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/get_identifying_code"
            android:textColor="@color/primary_bg_color"
            android:textSize="@dimen/dp_11" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_39"
        android:gravity="center_horizontal">

        <com.keydom.ih_common.view.MRadioButton
            android:id="@+id/agreement_rb"
            style="@style/MyCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:clickable="true"
            android:paddingLeft="@dimen/dp_5"
            android:text="@string/agreement"
            android:textColor="@color/agreement"
            android:textSize="@dimen/font_size_auxiliary" />

        <TextView
            android:id="@+id/register_agreement_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/agreement_rb"
            android:layout_alignBottom="@id/agreement_rb"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/agreement_rb"
            android:gravity="center_vertical"
            android:text="《用户服务协议》"
            android:autoLink="all"
            android:textColor="@color/agreement"
            android:textSize="@dimen/font_size_auxiliary" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="@dimen/dp_260"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_30">

        <Button
            android:id="@+id/next_step"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="@dimen/dp_260"
            android:layout_height="@dimen/dp_43"
            android:background="@drawable/next_step_btn_bg"
            android:gravity="center"
            android:text="@string/next_step"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/dp_17" />
    </RelativeLayout>


</LinearLayout>