<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/common_title_bar" />

    <com.ganxin.library.LoadDataLayout
        android:id="@+id/loadDataLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/primary_bg_color"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_10"
                android:background="@color/line_color" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/dp_19"
                android:paddingTop="@dimen/dp_23"
                android:paddingEnd="0dp">

                <ImageView
                    android:id="@+id/patient_info_head_iv"
                    android:layout_width="@dimen/dp_60"
                    android:layout_height="@dimen/dp_60"
                    android:src="@mipmap/im_default_head_image" />

                <LinearLayout
                    android:id="@+id/layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_15"
                    android:layout_marginTop="@dimen/dp_7"
                    android:layout_toEndOf="@id/patient_info_head_iv"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/patient_info_name_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/primary_font_color"
                        android:textSize="@dimen/sp_16"
                        tools:text="名字" />

                    <TextView
                        android:id="@+id/patient_info_sex_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dp_9"
                        android:textColor="@color/edit_font_color"
                        android:textSize="@dimen/sp_12"
                        tools:text="性别" />

                    <TextView
                        android:id="@+id/patient_info_age_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dp_9"
                        android:textColor="@color/edit_font_color"
                        android:textSize="@dimen/sp_12"
                        tools:text="12岁" />

                    <TextView
                        android:id="@+id/patient_info_phone_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dp_9"
                        android:textColor="@color/edit_font_color"
                        android:textSize="@dimen/sp_12"
                        tools:text="18900000001" />

                </LinearLayout>

                <TextView
                    android:id="@+id/patient_info_address_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/layout"
                    android:layout_marginStart="@dimen/dp_15"
                    android:layout_marginTop="@dimen/dp_10"
                    android:layout_toEndOf="@id/patient_info_head_iv"
                    android:drawableStart="@mipmap/location_blue"
                    android:drawablePadding="@dimen/dp_9"
                    android:gravity="bottom"
                    android:textColor="@color/index_text_color"
                    android:textSize="@dimen/sp_14"
                    tools:text="地址地址" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/patient_info_head_iv"
                    android:orientation="horizontal"
                    android:paddingStart="0dp"
                    android:paddingTop="@dimen/dp_18"
                    android:paddingEnd="@dimen/dp_23"
                    android:paddingBottom="12dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/txt_is_focus"
                        android:textColor="@color/edit_font_color"
                        android:textSize="@dimen/sp_14" />

                    <com.keydom.ih_doctor.view.SlipButton
                        android:id="@+id/patient_info_slip_bt"
                        android:layout_width="@dimen/dp_40"
                        android:layout_height="@dimen/dp_22" />
                </LinearLayout>
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_10"
                android:background="@color/line_color" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_18"
                android:orientation="horizontal"
                android:paddingStart="@dimen/dp_30"
                android:paddingTop="@dimen/dp_15"
                android:paddingEnd="@dimen/dp_23"
                android:paddingBottom="@dimen/dp_15">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableStart="@mipmap/point_green"
                    android:drawablePadding="@dimen/dp_14"
                    android:gravity="center"
                    android:text="@string/txt_label_colon"
                    android:textColor="@color/primary_font_color"
                    android:textSize="@dimen/sp_14" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50"
                android:orientation="horizontal"
                android:paddingStart="@dimen/dp_30"
                android:paddingEnd="@dimen/dp_23">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableStart="@mipmap/point_yellow"
                    android:drawablePadding="@dimen/dp_14"
                    android:gravity="center"
                    android:text="@string/txt_remark_colon"
                    android:textColor="@color/primary_font_color"
                    android:textSize="@dimen/sp_14" />

                <com.keydom.ih_common.view.InterceptorEditText
                    android:id="@+id/patient_info_remark_et"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/dp_30"
                    android:background="@null"
                    android:drawablePadding="@dimen/dp_10"
                    android:gravity="center_vertical|end"
                    android:hint="@string/txt_edit_remark_hint"
                    android:inputType="number"
                    android:maxLength="3"
                    android:singleLine="true"
                    android:textColor="#333333"
                    android:textColorHint="#BBBBBB"
                    android:textSize="@dimen/sp_14" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:layout_marginTop="@dimen/dp_20"
                android:background="@color/mine_interval_bg" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_38"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingStart="@dimen/dp_28"
                android:paddingEnd="@dimen/dp_28">

                <TextView
                    android:id="@+id/patient_info_oxygen_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableTop="@mipmap/icon_blood_oxygen"
                    android:drawablePadding="@dimen/dp_26"
                    android:gravity="center"
                    android:text="@string/txt_blood_oxygen"
                    android:textColor="@color/primary_font_color"
                    android:textSize="@dimen/sp_14" />

                <TextView
                    android:id="@+id/patient_info_pressure_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableTop="@mipmap/icon_blood_pressure"
                    android:drawablePadding="@dimen/dp_26"
                    android:gravity="center"
                    android:text="@string/txt_blood_pressure"
                    android:textColor="@color/primary_font_color"
                    android:textSize="@dimen/sp_14" />

                <TextView
                    android:id="@+id/patient_info_glucose_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableTop="@mipmap/icon_blood_glucose"
                    android:drawablePadding="@dimen/dp_26"
                    android:gravity="center"
                    android:text="@string/txt_blood_glucose"
                    android:textColor="@color/primary_font_color"
                    android:textSize="@dimen/sp_14" />

                <TextView
                    android:id="@+id/patient_info_heart_rate_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableTop="@mipmap/icon_heart_rate"
                    android:drawablePadding="@dimen/dp_26"
                    android:gravity="center"
                    android:text="@string/txt_heart_rate"
                    android:textColor="@color/primary_font_color"
                    android:textSize="@dimen/sp_14" />

            </LinearLayout>

        </LinearLayout>
    </com.ganxin.library.LoadDataLayout>

</LinearLayout>